🔧 Fix visible selected code when dark mode

--- a/frontend/src/components/system-design/article-detail-page/article-content/ArticleContent.module.scss
+++ b/frontend/src/components/system-design/article-detail-page/article-content/ArticleContent.module.scss
@@ -87,7 +87,8 @@
         list-style: none;
         position: relative;
 
-        &::before, &::after {
+        &::before,
+        &::after {
             content: '';
             position: absolute;
             top: 10px;
@@ -144,27 +145,6 @@
         :global(body.dark) & {
             color: #fff;
             background-color: #000;
-        }
-    }
-
-    pre {
-        margin: 0;
-        padding: 16px;
-        overflow: auto;
-        line-height: 1.5;
-        border-radius: 8px;
-        background-color: #212121;
-
-        code {
-            padding: 0;
-            background-color: transparent;
-            border-radius: 0;
-            color: #EEFFFF;
-        }
-
-        :global(body.dark) & {
-            background-color: #111;
-            color: #fff;
         }
     }
 
